# -*- coding: utf-8 -*-

2009-05-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 1.3.3.
	* doc/release_notes/rel_1_3_3.rdoc:  RubyGems 1.3.3 release notes.
	* lib/rubygems/specification.rb:  Default has_rdoc to true, ignore
	  its value.
	* lib/rubygems/doc_manager.rb:  Always generate RDoc regardless of
	  #has_rdoc?
	* lib/rubygems.rb:  Raise Gem::LoadError if Kernel#gem fails due to
	  previously-loaded gem.  Bug reported by Alf Mikula.

2009-05-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/server_command.rb:  Allow port names with
	  --port.
	* lib/rubygems/requirement.rb:  Match prerelease versions and ~>
	  correctly.  Patch #25759 by Yossef Mendelssohn.

2009-05-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Check bindir for executables, not
	  root.  Bug reported by David Chelimsky.  Remove Time.today, no way
	  to override it before RubyGems loads.  Bug #25564 by Emanuele
	  Vicentini.  Raise Gem::Exception for #installation_path when not
	  installed.  Bug #25741 by Daniel Berger.  Don't error in #validate
	  when homepage is nil.  Bug #25677 by Mike Burrows.
	* lib/rubygems/commands/cleanup_command.rb:  Clean up --user-install
	  gems.  Bug #25516 by Brett Eisenberg.
	* lib/rubygems/uninstaller.rb:  Uninstall executables from the correct
	  directory.  Bug #25555 by Brett Eisenberg.
	* lib/rubygems/server.rb:  Add search that jumps to RDoc.  Patch
	  #22959 by Vladimir Dobriakov.

2009-05-01  James Tucker  <jftucker@gmail.com>

	* lib/rubygems.rb: Gem.bin_path now escapes paths with spaces.

2009-04-30  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/commands/install_command.rb:  Replaced deprecated
	  Gem::SourceIndex method 'search' with 'find_name' when using
	  the -t option. Fixes bug # 25632 by Daniel Berger.

2009-04-30  James Tucker  <jftucker@gmail.com>

	* lib/rubygems/ext/rake_builder.rb: Use explicit ruby command loading
	  rubygems to invoke rake.
