@@ -1,5 +1,10 @@
 # -*- coding: utf-8 -*-
 
+2009-05-07  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/query_command.rb:  Support prerelease version
+	  listing (--prerelease).
+
 2009-05-04  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/rubygems_version.rb: 1.3.3.
